word-wrap and bottom margin fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,13 +45,22 @@ input[name="enviarMensaje"]:hover{
     color: black;
 }
 #chat{
-    height: 80vh;
+    height: 70vh;
     overflow: scroll;
     color: white;
     padding: 20px 30px 0px 30px;
 }
 .mensajeEnviado{
     background-color: rgb(12, 106, 189);
+    width: 100%;
+    white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    white-space: pre-wrap;       /* css-3 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    white-space: -webkit-pre-wrap; /* Newer versions of Chrome/Safari*/
+    word-break:normal;
+    white-space: normal;
 }
 .mensajeRecibido{
     background-color: rgb(102, 31, 2);
